Change body height from 100vh to 100% on small screens to ensure background image covers entire screen when scrolling

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-image: url('../images/coins.png');
     background-size: cover;
@@ -383,6 +383,11 @@ h4 {
 }
 
 @media screen and (max-width:1024px) {
+
+    body {
+        height: 100%;
+    }
+    
     #container {
         flex-direction: column;
         align-items: center;
